fix compile err